--- a/onepage.html
+++ b/onepage.html
@@ -78,7 +78,7 @@
 
 
 
-<div class="hero hero-overlay hero-blend2" style="background-image: url(assets/img/hero/2.jpg); background-position: top center;">
+<div class="hero hero-overlay hero-blend2" style="background-image: url(assets/img/01.jpg); background-position: top center;">
 
 	
 
@@ -113,6 +113,8 @@
 <main>
 	
 	
+
+	
 	
 	<section class="section section-grey about">
     <div class="container">
@@ -122,6 +124,7 @@
                 <p class="paragraph">
                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.
                 </p>
+                 <a href="" class="button button-reversed">Buy</a> 
             </div>
         </div>
     </div>
@@ -191,9 +194,39 @@
                 <p class="paragraph">
                     Lorem ipsum dolor sit amet, consectetuer adipiscing elit. Aenean commodo ligula eget dolor. Aenean massa. Cum sociis natoque penatibus et magnis dis parturient montes, nascetur ridiculus mus. Donec quam felis, ultricies nec, pellentesque eu, pretium quis, sem. Nulla consequat massa quis enim. Donec pede justo, fringilla vel, aliquet nec, vulputate eget, arcu.
                 </p>
+                 <a href="" class="button button-reversed">Buy</a> 
             </div>
         </div>
     </div>
+</section>
+	<section class="section section-line products">
+	<div class="container">
+		<div class="row">
+			<div class="col-xs-10 col-xs-offset-1 text-center">
+				<h2 class="h2">Products.<small>We only use the best.</small></h2>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0 text-center column">
+				<a href="http://farm2.staticflickr.com/1617/24108587812_6c9825d0da_b.jpg" class="fancybox" rel="" title="Title goes here"><div class="img-container img-ratio-1-1 illustration"><img src="/assets/img/pixel.gif" data-src="https://scdailymakeover.files.wordpress.com/2015/07/hair-products-moroccanoil.jpg?w=600&h=600" class="img-responsive lazyload"></div></a>
+				<h4 class="h4">Product $99</h4>
+				<p class="paragraph">Lorem ipsum dolor sit amet.</p>
+				<a href="#" class="button button-rounded"><i class="fa fa-shopping-cart" aria-hidden="true"></i>Buy</a>
+			</div>
+			<div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0 text-center column">
+				<div class="img-container img-ratio-1-1 illustration"><img src="/assets/img/pixel.gif" data-src="http://s2.thcdn.com/productimg/0/600/600/45/10658745-1354808873-846357.jpg" class="img-responsive lazyload"></div>
+				<h4 class="h4">Product $99</h4>
+				<p class="paragraph">Lorem ipsum dolor sit amet</p>
+				<a href="#" class="button button-rounded">Buy</a>
+			</div>
+			<div class="col-xs-10 col-xs-offset-1 col-sm-4 col-sm-offset-0 text-center">
+				<div class="img-container img-ratio-1-1 illustration"><img src="/assets/img/pixel.gif" data-src="http://demandware.edgesuite.net/aabj_prd/on/demandware.static/-/Sites-SBS-SallyBeautySupply/default/dwe21ef3bf/images/large/SBS-140036.png" class="img-responsive lazyload"></div>
+				<h4 class="h4">Product $99</h4>
+				<p class="paragraph">Lorem ipsum dolor sit amet</p>
+				<a href="#" class="button button-reversed">Buy</a>
+			</div>
+		</div>
+	</div>
 </section>
 	<div class="visual-bar visual-bar-fixed visual-bar-noblend" style="background-image: url(assets/img/visual.jpg)">
     <div class="container visual-bar-inner">
@@ -219,7 +252,7 @@
 	
 
 	
-	<section class="section address contact">
+	<section class="section section-line address contact">
 	<div class="container">
 		<div class="row">
 			<div class="col-sm-12 text-center">
@@ -253,8 +286,60 @@
 		</div>
 	</div>
 </section>
-	
-	
+	<section class="section section-grey">
+	<div class="container">
+		<div class="row">
+			<div class="col-sm-12 text-center">
+				<h2 class="h2">Say hi<small>Drop by or drop us a line</small></h2>
+			</div>
+		</div>
+		<div class="row">
+			<div class="col-xs-10 col-xs-offset-1">
+				
+				<div class="row">
+					<form id="contact" class="" role="form">
+						<div class="col-sm-12">
+							<div class="successContent">
+								<i class="fa fa-check"></i>Your message has been sent successfully.
+							</div>
+							<div class="errorContent">
+								<i class="fa fa-exclamation-circle"></i>There was a problem validating the form please check!
+							</div>
+						</div>
+						<div class="col-sm-6">
+							<div class="form-group">
+								<input type="text" class="form-control" id="name" name="name" placeholder="Naam" required="required" maxlength="30">
+							</div>
+							<div class="form-group">
+								<input type="email" class="form-control" id="email" name="email" placeholder="E-mail" required="required" maxlength="30">
+							</div>
+							<div class="form-group">
+								<input type="text" class="form-control" id="subject" name="subject" placeholder="Onderwerp" required="required" maxlength="50">
+							</div>
+						</div>
+						<div class="col-sm-6">
+							<div class="form-group">
+								<textarea class="form-control" id="message" name="message" placeholder="Bericht" value="" required="required" rows="6" maxlength="100" data-validation-required-message="Please enter a message."></textarea>
+							</div>
+						</div>
+						<div class="col-sm-12 text-center">
+							<button type="submit" id="form-submit" name="submit" class="button">Send</button>
+						</div>
+					</form>
+				</div>
+			</div>
+		</div>
+	</div>
+</section>
+	<div class="visual-bar visual-bar-fixed visual-bar-noblend" style="background-image: url(assets/img/visual.jpg)">
+    <div class="container visual-bar-inner">
+        <div class="row">
+            <div class="col-xs-10 col-xs-offset-1 text-center">
+                 
+            </div>
+        </div>
+    </div>
+</div>
 </main>
 <footer>
 	<div class="container">
