--- a/onepage.html
+++ b/onepage.html
@@ -92,7 +92,7 @@
 		</div>
 	</div>
 
-	<a href="#" class="button button-more button-outline-white scroll-to" data-level="about">Read more</a>
+	<a class="button button-more button-outline-white scroll-to" data-level="about">Read more</a>
 
 </div>
 
