--- a/onepage.html
+++ b/onepage.html
@@ -110,7 +110,7 @@
 		</div>
 		<div class="row">
 			<div class="col-xs-10 col-xs-offset-1 col-md-5 col-md-offset-1">
-				<div class="img-container img-ratio-1-1 illustration"><img src="https://static1.squarespace.com/static/57813ef759cc687a7d606e9c/t/57968ebd29687f433936510d/1469484738126/?format=500w" class="img-responsive"></div>
+				<div class="img-container img-ratio-1-1 illustration"><img src="https://static1.squarespace.com/static/57813ef759cc687a7d606e9c/t/57968ebd29687f433936510d/1469484738126/?format=500w" alt="foto title" class="img-responsive"></div>
 			</div>
 			<div class="col-xs-10 col-xs-offset-1 col-md-5 col-md-offset-0">
 				
@@ -128,7 +128,7 @@
 		<div class="row">
 			<div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-1">
 				<div class="img-container img-ratio-1-1 illustration">
-					<img src="assets/img/watch.jpg" class="img-responsive">
+					<img src="assets/img/watch.jpg" alt="foto title" class="img-responsive">
 				</div>
 			</div>
 			<div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-0">
@@ -151,7 +151,7 @@
 			</div>
 			<div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-0">
 				<div class="img-container img-ratio-1-1 illustration">
-					<img src="assets/img/watch.jpg" class="img-responsive">
+					<img src="assets/img/watch.jpg" alt="foto title" class="img-responsive">
 				</div>
 			</div>
 		</div>
