--- a/onepage.html
+++ b/onepage.html
@@ -110,7 +110,7 @@
 		</div>
 		<div class="row">
 			<div class="col-xs-10 col-xs-offset-1 col-md-5 col-md-offset-1">
-				<div class="img-container img-ratio-1-1 illustration"><img src="https://static1.squarespace.com/static/57813ef759cc687a7d606e9c/t/57968ebd29687f433936510d/1469484738126/?format=500w" alt="foto title" class="img-responsive"></div>
+				<div class="img-container img-ratio-1-1 illustration"><img src="https://static1.squarespace.com/static/57813ef759cc687a7d606e9c/t/57968ebd29687f433936510d/1469484738126/?format=500w" alt="foto title asdasd" class="img-responsive"></div>
 			</div>
 			<div class="col-xs-10 col-xs-offset-1 col-md-5 col-md-offset-0">
 				
@@ -128,7 +128,7 @@
 		<div class="row">
 			<div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-1">
 				<div class="img-container img-ratio-1-1 illustration">
-					<img src="assets/img/watch.jpg" alt="foto title" class="img-responsive">
+					<img src="assets/img/watch.jpg" alt="foto title 1" class="img-responsive">
 				</div>
 			</div>
 			<div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-0">
@@ -151,7 +151,7 @@
 			</div>
 			<div class="col-xs-10 col-xs-offset-1 col-sm-5 col-sm-offset-0">
 				<div class="img-container img-ratio-1-1 illustration">
-					<img src="assets/img/watch.jpg" alt="foto title" class="img-responsive">
+					<img src="assets/img/watch.jpg" alt="foto title 2" class="img-responsive">
 				</div>
 			</div>
 		</div>
@@ -180,48 +180,48 @@
                 <h2 class="h2">Gallery</h2>
                 <div id="gallery-mansory">
                     <div class="item" data-order="0">
-                        <a href="http://farm2.staticflickr.com/1617/24108587812_6c9825d0da_b.jpg" class="fancybox" rel="gallery" title="Title goes here">
-                            <img alt="foto description" src="assets/img/pixel.gif" data-src="http://67.media.tumblr.com/0f21edde2aaaac7a2d19f608ad72d357/tumblr_n1o9dejqYP1qev340o1_500.jpg" class="img-responsive lazyload">
+                        <a href="http://67.media.tumblr.com/0f21edde2aaaac7a2d19f608ad72d357/tumblr_n1o9dejqYP1qev340o1_500.jpg" class="fancybox" rel="gallery" title="Title goes here">
+                            <img alt="foto description 1" src="assets/img/pixel.gif" data-src="http://67.media.tumblr.com/0f21edde2aaaac7a2d19f608ad72d357/tumblr_n1o9dejqYP1qev340o1_500.jpg" class="img-responsive lazyload">
                         </a>
                     </div>
                     <div class="item" data-order="1">
-                        <a href="http://farm2.staticflickr.com/1617/24108587812_6c9825d0da_b.jpg" class="fancybox" rel="gallery" title="Title goes here">
-                            <img alt="foto description" src="assets/img/pixel.gif" data-src="http://67.media.tumblr.com/5b3b71db1a03233ea5acc5a3c006904b/tumblr_o3r4biqFfs1uf48l3o1_500.jpg" class="img-responsive lazyload">
+                        <a href="http://67.media.tumblr.com/5b3b71db1a03233ea5acc5a3c006904b/tumblr_o3r4biqFfs1uf48l3o1_500.jpg" class="fancybox" rel="gallery" title="Title goes here">
+                            <img alt="foto description 2" src="assets/img/pixel.gif" data-src="http://67.media.tumblr.com/5b3b71db1a03233ea5acc5a3c006904b/tumblr_o3r4biqFfs1uf48l3o1_500.jpg" class="img-responsive lazyload">
                         </a>
                     </div>
                     <div class="item" data-order="2">
-                        <a href="http://farm2.staticflickr.com/1617/24108587812_6c9825d0da_b.jpg" class="fancybox" rel="gallery" title="Title goes here">
+                        <a href="http://65.media.tumblr.com/7f342b18adc0146a157a9ada7dfd09ce/tumblr_noy3t4cOJ31sqtu3so1_500.jpg" class="fancybox" rel="gallery" title="Title goes here">
                             <img alt="foto description" src="assets/img/pixel.gif" data-src="http://65.media.tumblr.com/7f342b18adc0146a157a9ada7dfd09ce/tumblr_noy3t4cOJ31sqtu3so1_500.jpg" class="img-responsive lazyload">
                         </a>
                     </div>
                     <div class="item" data-order="3">
-                        <a href="http://farm2.staticflickr.com/1617/24108587812_6c9825d0da_b.jpg" class="fancybox" rel="gallery" title="Title goes here">
-                            <img alt="foto description" src="assets/img/pixel.gif" data-src="http://67.media.tumblr.com/72acbdb12b971f67277ac064b1921e50/tumblr_o72rnrf0hC1uvg4mdo1_500.jpg" class="img-responsive lazyload">
+                        <a href="http://67.media.tumblr.com/72acbdb12b971f67277ac064b1921e50/tumblr_o72rnrf0hC1uvg4mdo1_500.jpg" class="fancybox" rel="gallery" title="Title goes here">
+                            <img alt="foto description 3" src="assets/img/pixel.gif" data-src="http://67.media.tumblr.com/72acbdb12b971f67277ac064b1921e50/tumblr_o72rnrf0hC1uvg4mdo1_500.jpg" class="img-responsive lazyload">
                         </a>
                     </div>
                     <div class="item" data-order="4">
-                        <a href="http://farm2.staticflickr.com/1617/24108587812_6c9825d0da_b.jpg" class="fancybox" rel="gallery" title="Title goes here">
-                            <img alt="foto description" src="assets/img/pixel.gif" data-src="http://67.media.tumblr.com/bc07f043d1fd98b30f8937d3b752ba77/tumblr_o8g8wbb8U51rpwhvdo1_500.jpg" class="img-responsive lazyload">
+                        <a href="http://67.media.tumblr.com/bc07f043d1fd98b30f8937d3b752ba77/tumblr_o8g8wbb8U51rpwhvdo1_500.jpg" class="fancybox" rel="gallery" title="Title goes here">
+                            <img alt="foto description 4" src="assets/img/pixel.gif" data-src="http://67.media.tumblr.com/bc07f043d1fd98b30f8937d3b752ba77/tumblr_o8g8wbb8U51rpwhvdo1_500.jpg" class="img-responsive lazyload">
                         </a>
                     </div>
                     <div class="item" data-order="5">
-                        <a href="http://farm2.staticflickr.com/1617/24108587812_6c9825d0da_b.jpg" class="fancybox" rel="gallery" title="Title goes here">
-                            <img alt="foto description" src="assets/img/pixel.gif" data-src="http://66.media.tumblr.com/b0ace16d286477a93e044af43f5cf9f0/tumblr_o7v2zfuXms1tkup1jo1_500.jpg" class="img-responsive lazyload">
+                        <a href="http://66.media.tumblr.com/b0ace16d286477a93e044af43f5cf9f0/tumblr_o7v2zfuXms1tkup1jo1_500.jpg" class="fancybox" rel="gallery" title="Title goes here">
+                            <img alt="foto description 5" src="assets/img/pixel.gif" data-src="http://66.media.tumblr.com/b0ace16d286477a93e044af43f5cf9f0/tumblr_o7v2zfuXms1tkup1jo1_500.jpg" class="img-responsive lazyload">
                         </a>
                     </div>
                     <div class="item" data-order="6">
-                        <a href="http://farm2.staticflickr.com/1617/24108587812_6c9825d0da_b.jpg" class="fancybox" rel="gallery" title="Title goes here">
-                            <img alt="foto description" src="assets/img/pixel.gif" data-src="http://67.media.tumblr.com/bf124c4027560990b2b3f823db760f91/tumblr_nkeu069TRE1rivnsyo1_500.jpg" class="img-responsive lazyload">
+                        <a href="http://67.media.tumblr.com/bf124c4027560990b2b3f823db760f91/tumblr_nkeu069TRE1rivnsyo1_500.jpg" class="fancybox" rel="gallery" title="Title goes here">
+                            <img alt="foto description 6" src="assets/img/pixel.gif" data-src="http://67.media.tumblr.com/bf124c4027560990b2b3f823db760f91/tumblr_nkeu069TRE1rivnsyo1_500.jpg" class="img-responsive lazyload">
                         </a>
                     </div>
                     <div class="item" data-order="7">
-                        <a href="http://farm2.staticflickr.com/1617/24108587812_6c9825d0da_b.jpg" class="fancybox" rel="gallery" title="Title goes here">
-                            <img alt="foto description" src="assets/img/pixel.gif" data-src="http://66.media.tumblr.com/6d4af5e2dfe29162bc2ec05e7c54ada8/tumblr_nt7b9yYbJE1rivnsyo1_500.jpg" class="img-responsive lazyload">
+                        <a href="http://66.media.tumblr.com/6d4af5e2dfe29162bc2ec05e7c54ada8/tumblr_nt7b9yYbJE1rivnsyo1_500.jpg" class="fancybox" rel="gallery" title="Title goes here">
+                            <img alt="foto description 7" src="assets/img/pixel.gif" data-src="http://66.media.tumblr.com/6d4af5e2dfe29162bc2ec05e7c54ada8/tumblr_nt7b9yYbJE1rivnsyo1_500.jpg" class="img-responsive lazyload">
                         </a>
                     </div>
                     <div class="item" data-order="8">
-                        <a href="http://farm2.staticflickr.com/1617/24108587812_6c9825d0da_b.jpg" class="fancybox" rel="gallery" title="Title goes here">
-                            <img alt="foto description" src="assets/img/pixel.gif" data-src="http://67.media.tumblr.com/a6f07ab15bd45ebfa9b0c1f3c9e813b2/tumblr_o537nxsQ7c1twb0n0o1_500.jpg" class="img-responsive lazyload">
+                        <a href="http://67.media.tumblr.com/a6f07ab15bd45ebfa9b0c1f3c9e813b2/tumblr_o537nxsQ7c1twb0n0o1_500.jpg" class="fancybox" rel="gallery" title="Title goes here">
+                            <img alt="foto description 8" src="assets/img/pixel.gif" data-src="http://67.media.tumblr.com/a6f07ab15bd45ebfa9b0c1f3c9e813b2/tumblr_o537nxsQ7c1twb0n0o1_500.jpg" class="img-responsive lazyload">
                         </a>
                     </div>
                 </div>
@@ -252,26 +252,26 @@
 		</div>
 		<div class="row">
 			<div class="col-xs-6 col-sm-3 text-center column">
-				<a href="http://farm2.staticflickr.com/1617/24108587812_6c9825d0da_b.jpg" class="fancybox" rel="" title="Title goes here"><div class="img-container img-ratio-3-4 illustration"><img alt="product" src="assets/img/pixel.gif" data-src="assets/img/product.jpg" class="img-responsive lazyload"></div></a>
-				<h4 class="h4">$99.<sup>95</sup></h4>
+				<a href="http://farm2.staticflickr.com/1617/24108587812_6c9825d0da_b.jpg" class="fancybox" rel="" title="Title goes here"><div class="img-container img-ratio-3-4 illustration"><img alt="product 1" src="assets/img/pixel.gif" data-src="assets/img/product.jpg" class="img-responsive lazyload"></div></a>
+				<p class="h4">$99.<sup>95</sup></p>
 				<p class="paragraph">Yellow Coffee</p>
 				<a href="#" class="button button-rounded"><i class="fa fa-shopping-cart" aria-hidden="true"></i>Buy</a>
 			</div>
 			<div class="col-xs-6 col-sm-3 text-center column">
-				<div class="img-container img-ratio-3-4 illustration"><img alt="product" src="assets/img/pixel.gif" data-src="assets/img/product.jpg" class="img-responsive lazyload"></div>
-				<h4 class="h4">$99.<sup>95</sup></h4>
+				<div class="img-container img-ratio-3-4 illustration"><img alt="product 2" src="assets/img/pixel.gif" data-src="assets/img/product.jpg" class="img-responsive lazyload"></div>
+				<p class="h4">$99.<sup>95</sup></p>
 				<p class="paragraph">Yellow Coffee</p>
 				<a href="#" class="button button-rounded">Buy</a>
 			</div>
 			<div class="col-xs-6 col-sm-3 text-center column">
-				<div class="img-container img-ratio-3-4 illustration"><img alt="product" src="assets/img/pixel.gif" data-src="assets/img/product.jpg" class="img-responsive lazyload"></div>
-				<h4 class="h4">$99.<sup>95</sup></h4>
+				<div class="img-container img-ratio-3-4 illustration"><img alt="product 3" src="assets/img/pixel.gif" data-src="assets/img/product.jpg" class="img-responsive lazyload"></div>
+				<p class="h4">$99.<sup>95</sup></p>
 				<p class="paragraph">Yellow Coffee</p>
 				<a href="#" class="button button-reversed">Buy</a>
 			</div>
 			<div class="col-xs-6 col-sm-3 text-center">
-				<div class="img-container img-ratio-3-4 illustration"><img alt="product" src="assets/img/pixel.gif" data-src="assets/img/product.jpg" class="img-responsive lazyload"></div>
-				<h4 class="h4">Product</h4>
+				<div class="img-container img-ratio-3-4 illustration"><img alt="product 4" src="assets/img/pixel.gif" data-src="assets/img/product.jpg" class="img-responsive lazyload"></div>
+				<p class="h4">Product</p>
 				<p class="paragraph">$99</p>
 				<a href="#" class="button button-reversed">Buy</a>
 			</div>
@@ -282,7 +282,7 @@
     <div class="container visual-bar-inner">
         <div class="row">
             <div class="col-xs-10 col-xs-offset-1 text-center">
-                 <p>Some of my recent projects</p>
+                 <h3>Some of my recent projects</h3>
             </div>
         </div>
     </div>
@@ -451,6 +451,7 @@
 						</div>
 						<div class="col-sm-6">
 							<div class="form-group">
+								<label for="name">Naam</label>
 								<input type="text" class="form-control" id="name" name="name" placeholder="Naam" required="required" maxlength="30">
 							</div>
 							<div class="form-group">
@@ -478,7 +479,7 @@
     <div class="container visual-bar-inner">
         <div class="row">
             <div class="col-xs-10 col-xs-offset-1 text-center">
-                 <p>Some of my recent projects</p>
+                 <h3>Some of my recent projects</h3>
             </div>
         </div>
     </div>
