--- a/onepage.html
+++ b/onepage.html
@@ -180,47 +180,47 @@
                 <h2 class="h2">Gallery</h2>
                 <div id="gallery-mansory">
                     <div class="item" data-order="0">
-                        <a href="http://67.media.tumblr.com/0f21edde2aaaac7a2d19f608ad72d357/tumblr_n1o9dejqYP1qev340o1_500.jpg" class="fancybox" rel="gallery" title="Title goes here">
+                        <a href="http://67.media.tumblr.com/0f21edde2aaaac7a2d19f608ad72d357/tumblr_n1o9dejqYP1qev340o1_500.jpg" class="fancybox" rel="alternate" title="Title goes here">
                             <img alt="foto description 1" src="assets/img/pixel.gif" data-src="http://67.media.tumblr.com/0f21edde2aaaac7a2d19f608ad72d357/tumblr_n1o9dejqYP1qev340o1_500.jpg" class="img-responsive lazyload">
                         </a>
                     </div>
                     <div class="item" data-order="1">
-                        <a href="http://67.media.tumblr.com/5b3b71db1a03233ea5acc5a3c006904b/tumblr_o3r4biqFfs1uf48l3o1_500.jpg" class="fancybox" rel="gallery" title="Title goes here">
+                        <a href="http://67.media.tumblr.com/5b3b71db1a03233ea5acc5a3c006904b/tumblr_o3r4biqFfs1uf48l3o1_500.jpg" class="fancybox" rel="alternate" title="Title goes here">
                             <img alt="foto description 2" src="assets/img/pixel.gif" data-src="http://67.media.tumblr.com/5b3b71db1a03233ea5acc5a3c006904b/tumblr_o3r4biqFfs1uf48l3o1_500.jpg" class="img-responsive lazyload">
                         </a>
                     </div>
                     <div class="item" data-order="2">
-                        <a href="http://65.media.tumblr.com/7f342b18adc0146a157a9ada7dfd09ce/tumblr_noy3t4cOJ31sqtu3so1_500.jpg" class="fancybox" rel="gallery" title="Title goes here">
+                        <a href="http://65.media.tumblr.com/7f342b18adc0146a157a9ada7dfd09ce/tumblr_noy3t4cOJ31sqtu3so1_500.jpg" class="fancybox" rel="alternate" title="Title goes here">
                             <img alt="foto description" src="assets/img/pixel.gif" data-src="http://65.media.tumblr.com/7f342b18adc0146a157a9ada7dfd09ce/tumblr_noy3t4cOJ31sqtu3so1_500.jpg" class="img-responsive lazyload">
                         </a>
                     </div>
                     <div class="item" data-order="3">
-                        <a href="http://67.media.tumblr.com/72acbdb12b971f67277ac064b1921e50/tumblr_o72rnrf0hC1uvg4mdo1_500.jpg" class="fancybox" rel="gallery" title="Title goes here">
+                        <a href="http://67.media.tumblr.com/72acbdb12b971f67277ac064b1921e50/tumblr_o72rnrf0hC1uvg4mdo1_500.jpg" class="fancybox" rel="alternate" title="Title goes here">
                             <img alt="foto description 3" src="assets/img/pixel.gif" data-src="http://67.media.tumblr.com/72acbdb12b971f67277ac064b1921e50/tumblr_o72rnrf0hC1uvg4mdo1_500.jpg" class="img-responsive lazyload">
                         </a>
                     </div>
                     <div class="item" data-order="4">
-                        <a href="http://67.media.tumblr.com/bc07f043d1fd98b30f8937d3b752ba77/tumblr_o8g8wbb8U51rpwhvdo1_500.jpg" class="fancybox" rel="gallery" title="Title goes here">
+                        <a href="http://67.media.tumblr.com/bc07f043d1fd98b30f8937d3b752ba77/tumblr_o8g8wbb8U51rpwhvdo1_500.jpg" class="fancybox" rel="alternate" title="Title goes here">
                             <img alt="foto description 4" src="assets/img/pixel.gif" data-src="http://67.media.tumblr.com/bc07f043d1fd98b30f8937d3b752ba77/tumblr_o8g8wbb8U51rpwhvdo1_500.jpg" class="img-responsive lazyload">
                         </a>
                     </div>
                     <div class="item" data-order="5">
-                        <a href="http://66.media.tumblr.com/b0ace16d286477a93e044af43f5cf9f0/tumblr_o7v2zfuXms1tkup1jo1_500.jpg" class="fancybox" rel="gallery" title="Title goes here">
+                        <a href="http://66.media.tumblr.com/b0ace16d286477a93e044af43f5cf9f0/tumblr_o7v2zfuXms1tkup1jo1_500.jpg" class="fancybox" rel="alternate" title="Title goes here">
                             <img alt="foto description 5" src="assets/img/pixel.gif" data-src="http://66.media.tumblr.com/b0ace16d286477a93e044af43f5cf9f0/tumblr_o7v2zfuXms1tkup1jo1_500.jpg" class="img-responsive lazyload">
                         </a>
                     </div>
                     <div class="item" data-order="6">
-                        <a href="http://67.media.tumblr.com/bf124c4027560990b2b3f823db760f91/tumblr_nkeu069TRE1rivnsyo1_500.jpg" class="fancybox" rel="gallery" title="Title goes here">
+                        <a href="http://67.media.tumblr.com/bf124c4027560990b2b3f823db760f91/tumblr_nkeu069TRE1rivnsyo1_500.jpg" class="fancybox" rel="alternate" title="Title goes here">
                             <img alt="foto description 6" src="assets/img/pixel.gif" data-src="http://67.media.tumblr.com/bf124c4027560990b2b3f823db760f91/tumblr_nkeu069TRE1rivnsyo1_500.jpg" class="img-responsive lazyload">
                         </a>
                     </div>
                     <div class="item" data-order="7">
-                        <a href="http://66.media.tumblr.com/6d4af5e2dfe29162bc2ec05e7c54ada8/tumblr_nt7b9yYbJE1rivnsyo1_500.jpg" class="fancybox" rel="gallery" title="Title goes here">
+                        <a href="http://66.media.tumblr.com/6d4af5e2dfe29162bc2ec05e7c54ada8/tumblr_nt7b9yYbJE1rivnsyo1_500.jpg" class="fancybox" rel="alternate" title="Title goes here">
                             <img alt="foto description 7" src="assets/img/pixel.gif" data-src="http://66.media.tumblr.com/6d4af5e2dfe29162bc2ec05e7c54ada8/tumblr_nt7b9yYbJE1rivnsyo1_500.jpg" class="img-responsive lazyload">
                         </a>
                     </div>
                     <div class="item" data-order="8">
-                        <a href="http://67.media.tumblr.com/a6f07ab15bd45ebfa9b0c1f3c9e813b2/tumblr_o537nxsQ7c1twb0n0o1_500.jpg" class="fancybox" rel="gallery" title="Title goes here">
+                        <a href="http://67.media.tumblr.com/a6f07ab15bd45ebfa9b0c1f3c9e813b2/tumblr_o537nxsQ7c1twb0n0o1_500.jpg" class="fancybox" rel="alternate" title="Title goes here">
                             <img alt="foto description 8" src="assets/img/pixel.gif" data-src="http://67.media.tumblr.com/a6f07ab15bd45ebfa9b0c1f3c9e813b2/tumblr_o537nxsQ7c1twb0n0o1_500.jpg" class="img-responsive lazyload">
                         </a>
                     </div>
@@ -385,13 +385,13 @@
 		<div class="row">
 			<div class="col-xs-10 col-xs-offset-1 col-md-4 col-md-offset-0 text-center column">
 				<div class="icon"><i class="fa fa-map-o" aria-hidden="true"></i></div>
-				<h4 class="h4">Address</h4>
+				<p class="h4">Address</p>
 				<p class="paragraph m-b-0">Gasthuisstraat 48, 2011 XP Haarlem, The Netherlands
 				</p>
 			</div>
 			<div class="col-xs-10 col-xs-offset-1 col-md-4 col-md-offset-0 text-center column">
 				<div class="icon"><i class="fa fa-clock-o" aria-hidden="true"></i></div>
-				<h4 class="h4">Openingstijden</h4>
+				<p class="h4">Openingstijden</p>
 				<p class="paragraph m-b-0">
 					Ma t/m Vr 8.00 - 18.00<br />
 					Zaterdag 8.00 - 17.30<br />
@@ -400,7 +400,7 @@
 			</div>
 			<div class="col-xs-10 col-xs-offset-1 col-md-4 col-md-offset-0 text-center">
 				<div class="icon"><i class="fa fa-envelope-o" aria-hidden="true"></i></div>
-				<h4 class="h4">Contact</h4>
+				<p class="h4">Contact</p>
 				<p class="paragraph m-b-0">
 					E-mail: <a href="#">yourname@domain.com</a><br />
 					Phone: +40 (0) 012 345 6789
